add first content

--- a/src/pages/blog/[...id].astro
+++ b/src/pages/blog/[...id].astro
@@ -23,7 +23,7 @@ const { Content } = await render(entry)
 ---
 
 <BaseLayout>
-    <SeoPost slot="head" entry="{entry" />
+    <SeoPost slot="head" entry={entry} />
     <div>
         {
             entry.data.image && (
