--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout.astro'
+import Posts from '@/components/Posts.astro'
 import SeoPage from '@/components/SeoPage.astro'
 ---
 
 <BaseLayout>
     <SeoPage slot="head" title="Blog" />
+    <Posts />
 </BaseLayout>
