--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ import Footer from '@/components/Footer.astro'
 import Navigation from '@/components/Navigation.astro'
 ---
 
-<html lang="en">
+<html lang="es">
   <BaseHead>
     <slot name="head" />
   </BaseHead>
