--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import '@/styles/global.css'
 
 import BaseHead from '@/components/BaseHead.astro'
 import Footer from '@/components/Footer.astro'
-import Navigation from '@/components/Navigation.astro'
+// import Navigation from '@/components/Navigation.astro'
 ---
 
 <html lang="es">
@@ -11,7 +11,7 @@ import Navigation from '@/components/Navigation.astro'
     <slot name="head" />
   </BaseHead>
   <body class="bg-bg dark:bg-dark-bg">
-    <Navigation />
+    <!-- <Navigation /> -->
     <div class="mx-auto max-w-screen-sm p-3 font-sans sm:p-6">
       <main class="min-h-[80vh]">
         <slot />
